src/style.css
* {
    box-sizing: border-box;
}

body {
    font-family: 'Roboto', sans-serif;
    background-color: #FAFAFA;
    padding-bottom: 50px;
}

header {
    background-color: #EC362D;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 69px;
    width: 100%;
    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
    position: fixed;
    top: 0;
    left: 0;
    z-index: 2;
}

header h2 {
    font-size: 37px;
    font-weight: 700;
    color: #FFFFFF;
    margin: 0;
    cursor: pointer;
}

.container {
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
    margin-top: 69px;
}

.quizes {
    width: 1051px;
}

.sem-quiz {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    border: 1px dashed #D4D4D4;
    height: 181px;
    border-radius: 5px;
}

.texto-sem-quiz {
    text-align: center;
    color: #B9B9B9;
    font-size: 20px;
    margin-bottom: 20px;
}

.criar-quiz {
    width: 151px;
    height: 40px;
    border-radius: 20px;
    border: 1px dashed #EC362D;
    background-color: #FAFAFA;
    font-size: 21px;
    color: #EC362D;
    cursor: pointer;
    transition: 200ms ease;
}

.criar-quiz:hover {
    background-color: #EC362D;
    color: #FAFAFA;
}

.quizes-do-usuario {
    margin-top: 70px;
}

.todos-quizes {
    margin-top: 30px;

}

.titulo {
    font-size: 20px;
    font-weight: 700;
    display: flex;
    align-items: center;
    padding-bottom: 15px;
    background-color: #FAFAFA;
    padding-top: 20px;
    position: sticky;
    top: 69px;
    z-index: 1;
}

.titulo ion-icon {
    font-size: 30px;
    color: #EC362D;
    margin-left: 17px;
    transition: 200ms;
    cursor: pointer;
}

.titulo ion-icon:hover {
    filter: brightness(1.5);
}

.quiz-cards {
    display: flex;
    justify-content: space-around;
    align-items: center;
    flex-wrap: wrap;
}

.criacao {
    width: 600px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

h2 {
    font-size: 23px;
    font-weight: 700;
    margin: 64px 0 36px 0;
}

.pergunta,
.nivel {
    width: 100%;
    background-color: #FFFFFF;
    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.05);
    padding: 27px 17px;
    margin-bottom: 24px;
    transition: 500ms;
}

.pergunta ion-icon,
.nivel ion-icon {
    transition: 300ms;
    cursor: pointer;
}

.pergunta ion-icon:hover,
.nivel ion-icon:hover {
    transform: translateY(-2px);
}

h3 {
    font-size: 20px;
    font-weight: 700;
    display: flex;
    justify-content: space-between;
}

h3 ion-icon {
    font-size: 24px;
}

.wrapper,
.informacoes-basicas-form {
    display: flex;
    flex-direction: column;
}

.informacoes-basicas,
.sucesso-quiz {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 600px;
}

.informacoes-basicas h3,
.sucesso-quiz h3 {
    margin: 71px auto 27px;
    font-weight: 700;
    font-size: 23px;
    line-height: 27px;
}

.informacoes-basicas-form {
    width: 600px;
    background-color: #FFFFFF;
    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.05);
    padding: 20px 15px;
}

input[type=text] {
    margin-top: 14px;
    height: 46px;
    border: 1px solid #D1D1D1;
    border-radius: 5px;
    padding-left: 22px;
    font-size: 19px;
    line-height: 22px;
    width: 100%;
}

textarea {
    margin-top: 14px;
    height: 177px;
    border: 1px solid #D1D1D1;
    border-radius: 5px;
    padding-left: 22px;
    padding-top: 10px;
    font-size: 19px;
    line-height: 22px;
    width: 100%;
    font-family: 'Roboto', sans-serif;
}

input[type=text]::placeholder {
    color: #BABABA;
    opacity: 1;
    font-style: italic;
    font-size: 19px;
    line-height: 22px;
    font-weight: 400;
}

textarea::placeholder {
    color: #BABABA;
    opacity: 1;
    font-style: italic;
    font-size: 19px;
    line-height: 22px;
    font-weight: 400;
    font-family: 'Roboto', sans-serif;
}

h6 {
    margin-top: 5px;
    font-weight: 400;
    font-size: 16px;
    line-height: 19px;
    color: #EC362D;
}

.sep {
    height: 34px;
}

.prosseguir {
    width: 324px;
    height: 54px;
    background-color: #EC362D;
    color: #FFFFFF;
    font-size: 21px;
    border: none;
    border-radius: 15px;
    margin: 56px 0;
    cursor: pointer;
}

.quiz-card {
    width: 340px;
    height: 181px;
    background-size: cover;
    background-position: center;
    object-fit: cover;
    word-break: break-all;
    border-radius: 5px;
    margin-top: 15px;
    position: relative;
    cursor: pointer;
    transition: 500ms;
}

.buttons {
    display: flex;
    flex-direction: column;
    width: 43px;
    background-color: #EC362D;
    position: absolute;
    top: 9px;
    right: 0;
    border-radius: 10px 0 0 10px;
    color: #FFFFFF;
    font-size: 22px;
}

.edit-button {
    height: 44px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.trash-button {
    height: 44px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.quiz-card:hover {
    transform: translateY(-10px);
}


.quiz-card p {
    font-weight: 400;
    font-size: 19px;
    line-height: 22px;
    position: absolute;
    bottom: 10%;
    left: 20px;
    right: 20px;
    color: #FFFFFF;
    word-break: normal;
    overflow-wrap: break-word;
}

.mostrar-voltar {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
}

.mostrar-voltar .prosseguir {
    margin-bottom: 20px;
    transition: 300ms ease;
}

.mostrar-voltar .prosseguir:hover {
    filter: brightness(1.1);
}

.mostrar-voltar h4 {
    font-weight: 400;
    font-size: 21px;
    line-height: 25px;
    color: #818181;
    cursor: pointer;
}

.mostrar-voltar h4:hover {
    filter: brightness(0.8);
}

.sucesso-quiz .quiz-card {
    width: 500px;
    height: 266px;
}

.sucesso-quiz .quiz-card:hover {
    transform: initial;
}

.sucesso-quiz h4 {
    font-weight: 400;
    font-size: 21px;
    line-height: 25px;
    color: #818181;
    cursor: pointer;
    transition: 200ms;
}

.quizz {
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.header-quizz {
    width: 100%;
    padding: 84px 50px;
    display: flex;
    align-items: center;
    justify-content: center;
    background-size: cover;
    background-position: center;
    object-fit: cover;
}

.header-quizz p {
    font-weight: 400;
    font-size: 39px;
    color: #FFFFFF;
    word-break: break-all;
    word-break: normal;
    overflow-wrap: break-word;
}

.question-quizz,
.resultado-quizz {
    width: 759px;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 28px 35px;
    margin-top: 42px;
    background-color: #FFFFFF;
    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.05);
    scroll-margin-top: 100px;
}

/* .resultado-quizz {
    scroll-margin-top: 100px;
} */

.resultado-quizz~.mostrar-voltar {
    margin-bottom: 200px;
}

.question-quizz:last-child {
    margin-bottom: 170px;
}

.header-question,
.resultado-title {
    width: 100%;
    padding: 58px 30px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.resultado-title {
    background-color: #EC362D;
}

.header-question p,
.resultado-title p {
    font-weight: 700;
    font-size: 23px;
    line-height: 27px;
    color: #FFFFFF;
    mix-blend-mode: difference;
    word-break: normal;
    overflow-wrap: break-word;
}

.resultado-title p {
    mix-blend-mode: normal;
}

.images-question {
    width: 100%;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
}

.image-question {
    width: 330px;
    margin-top: 20px;
    display: flex;
    flex-direction: column;
    transition: 100ms;
}

.image-question img {
    width: 330px;
    height: 175px;
    cursor: pointer;
}

.opacity {
    opacity: 0.3;
}

.image-question p {
    font-weight: 700;
    font-size: 20px;
    margin-top: 12px;
    word-break: normal;
    overflow-wrap: break-word;
    transition: 100ms;
}

.resultado-imagem-text {
    width: 100%;
    margin-top: 15px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.resultado-imagem img {
    width: 364px;
    height: 273px;
}

.resultado-text {
    display: flex;
    justify-content: flex-start;
    align-items: flex-start;
    width: 100%;
    min-height: 273px;
    padding: 0 15px;
    font-weight: 700;
    font-size: 19px;
    line-height: 25px;
    color: #484848;
    word-break: normal;
    overflow-wrap: break-word;
}

.spinner {
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 50px;
}

.container > .spinner {
    margin-top: 300px;
}

.none {
    display: none;
    transition: 500ms ease;
}

.background-error {
    background-color: #FFE9E9;
}

.loading {
    position: absolute;
    right: 20px;
    top: 70px;
}

